# service_ext_sim

simulation/: CMakeLists.txt
simulation/include/: DischargeList.h  Patient.h  Simulation.h  Waitlist.h
simulation/output/: standard_pol_lambda_36.parquet
simulation/src/: DischargeList.cpp  Patient.cpp  Server.cpp  Waitlist.cpp  simulation.cpp
simulation_v1/include/: DischargeList.h  Patient.h  Reader_Writer.h  Server.h  Simulation.h  WriteCSV.h
simulation_v1/src/: DischargeList.cpp  Patient.cpp  Server.cpp  simulation.cpp
